--- a/packages/pagination/package.json
+++ b/packages/pagination/package.json
@@ -30,6 +30,7 @@
     "src/*",
     "dist/*"
   ],
+  "style": "dist/css/main.css",
   "scripts": {
     "prepare": "gulp -f ../../gulpfile.js --cwd=. prepare"
   },
