--- a/.github/workflows/publish-preview.yml
+++ b/.github/workflows/publish-preview.yml
@@ -1,4 +1,4 @@
-name: Visual Regression Testing and preview environment
+name: Publish preview environment
 
 permissions:
   id-token: write # Required for OIDC AWS authentication
@@ -40,31 +40,36 @@ jobs:
 
       # --- Build Storybook HTML ---
       - name: "Build Storybook HTML"
+        env:
+          STORYBOOK_TARGET_ENV: preview # Explicitly set for main.js}
+          S3_BUCKET_TOOLS: ${{ secrets.AWS_S3_BUCKET_TOOLS }}
         run: |
           npm run build-storybook
         working-directory: packages/storybook-html/
 
-      # --- Visual Regression (targets storybook-html) ---
-      - name: "Serve Storybook HTML for VRT"
-        run: |
-          npm run serve-storybook &
-        working-directory: packages/storybook-html/
-
-      - name: "Create screenshots (HTML)"
-        run: |
-          npm run update-screenshots
-
-      - name: "Configure AWS Credentials for Reg-Suit"
+      # --- Deploy to S3 ---
+      - name: Configure AWS Credentials for S3 Sync Preview
         uses: aws-actions/configure-aws-credentials@v4
         with:
           role-to-assume: ${{ secrets.AWS_ROLE_TO_ASSUME_TOOLS }}
           aws-region: ap-southeast-2
-          role-session-name: GitHubActions-RegSuit-${{ github.run_id }}
+          role-session-name: GitHubActions-S3Sync-Preview-${{ github.run_id }}
 
-      - name: "Run visual regression (HTML)"
-        env:
-          UQDS_PERSONAL_ACCESS_TOKEN: ${{ secrets.UQDS_PERSONAL_ACCESS_TOKEN }}
-          AWS_REGION: 'ap-southeast-2'
+      - name: "Sync Storybook HTML to S3 preview environment"
         run: |
-          npm run reg-suit run --update-screenshots
+          aws s3 sync packages/storybook-html/storybook-static s3://${{ secrets.AWS_S3_BUCKET_TOOLS }}/storybook-html/${{ github.run_id }} --acl public-read --follow-symlinks --delete
+  
+      - name: "Sync Storybook REACT to S3 preview environment"
+        run: |
+          aws s3 sync packages/storybook-react/storybook-static s3://${{ secrets.AWS_S3_BUCKET_TOOLS }}/storybook-react/${{ github.run_id }} --acl public-read --follow-symlinks --delete
+
+      - name: "Add links to Storybook previews in PR comment"
+        uses: marocchino/sticky-pull-request-comment@v2
+        with:
+          GITHUB_TOKEN: ${{ secrets.UQDS_PERSONAL_ACCESS_TOKEN }}
+          header: preview
+          message: |
+            Storybook Previews for Run `${{ github.run_id }}`:
+            * **HTML:** https://uq-ds-regsuit.s3.amazonaws.com/storybook-html/${{ github.run_id }}/index.html
+            * **React:** https://uq-ds-regsuit.s3.amazonaws.com/storybook-react/${{ github.run_id }}/index.html
 
