--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "@vitest/ui": "^2.1.4",
     "cli-progress": "^3.12.0",
     "core-js": "^3.39.0",
+    "css-loader": "^7.1.2",
     "eslint": "^8.57.1",
     "eslint-config-prettier": "^9.1.0",
     "eslint-plugin-import": "^2.31.0",
