ITSADSSD-59698 react publishing update (#621)
* Itsadssd 62638 release updates (#617)

* updated publish stable

* chore: Added path-ignore

* chore: updated lerna workflow

* chore: workflow fixes

* feat: added @uqds/react package (#618)

Co-authored-by: Brett <github@crunkhorn.com.au>

* chore(release):Publish

 - @uqds/react@1.0.0-alpha.1

* ITSADSSD-58562: Button alignment (#614)

* fix: initial button updates to align with styleguide

* fix: add focus state

* fix: --reverse and icon variants. code clean-up

* chore(release):Publish

 - @uqds/button@3.0.0-alpha.2
 - @uqds/hero@6.0.0-alpha.2
 - private-design-output@3.0.0-alpha.9
 - storybook-html@6.0.0-alpha.10

* ITSADSSD-61845: add grey-925 color (#615)

* fix: add new grey-925 color. update doco to reflect

* fix: remove grey-650 from doco

* chore(release):Publish

 - @uqds/accordion@6.0.0-alpha.2
 - @uqds/alert@6.0.0-alpha.2
 - @uqds/app-maps@3.0.0-alpha.2
 - @uqds/blockquote@5.0.0-alpha.2
 - @uqds/body@3.0.0-alpha.2
 - @uqds/breadcrumb@7.0.0-alpha.2
 - @uqds/button@3.0.0-alpha.3
 - @uqds/card@3.0.0-alpha.5
 - @uqds/core@4.0.0-alpha.1
 - @uqds/footer@6.0.0-alpha.3
 - @uqds/footer-legacy@3.0.0-alpha.1
 - @uqds/form@3.0.0-alpha.2
 - @uqds/grid@3.0.0-alpha.1
 - @uqds/grid-menu@3.0.0-alpha.2
 - @uqds/header@6.0.0-alpha.2
 - @uqds/header-legacy@3.0.0-alpha.2
 - @uqds/hero@6.0.0-alpha.3
 - @uqds/icon@3.0.0-alpha.2
 - @uqds/image@5.0.0-alpha.1
 - @uqds/layout@6.0.0-alpha.3
 - @uqds/lists@3.0.0-alpha.1
 - @uqds/loading-spinner@3.0.0-alpha.2
 - @uqds/navigation@6.0.0-alpha.2
 - @uqds/page-header@3.0.0-alpha.1
 - @uqds/pagination@3.0.0-alpha.2
 - @uqds/pane@3.0.0-alpha.3
 - @uqds/pill@5.0.0-alpha.1
 - @uqds/previous-next@3.0.0-alpha.2
 - private-design-output@3.0.0-alpha.10
 - @uqds/progression@3.0.0-alpha.1
 - @uqds/react@1.0.0-alpha.2
 - @uqds/sections@3.0.0-alpha.1
 - @uqds/side-nav@3.0.0-alpha.2
 - @uqds/site-header@6.0.0-alpha.2
 - @uqds/social@5.0.0-alpha.1
 - storybook-html@6.0.0-alpha.11
 - @uqds/table@3.0.

--- a/package.json
+++ b/package.json
@@ -53,6 +53,7 @@
     "gulp-rename": "^2.0.0",
     "gulp-sass": "^5.1.0",
     "gulp-uglify": "^3.0.2",
+    "http-server": "^14.1.1",
     "jsdom": "^25.0.1",
     "lerna": "^8.1.9",
     "msw": "^2.6.0",
@@ -85,7 +86,7 @@
     "test": "vitest run",
     "test-ui": "vitest --ui",
     "test-watch": "vitest",
-    "update-screenshots": "wait-on tcp:6006 && node scripts/screenshot.js",
+    "update-screenshots": "node scripts/screenshot.js",
     "reg-suit": "reg-suit run",
     "storybook-html": "cd packages/storybook-html && npm run storybook",
     "storybook-react": "cd packages/storybook-react && npm run storybook",
