updated package name

--- a/.github/workflows/publish-preview.yml
+++ b/.github/workflows/publish-preview.yml
@@ -32,6 +32,12 @@ jobs:
       - name: "📦️ Install dependencies"
         run: npm ci
 
+      # --- Build uqds-builder ---
+      - name: "Build uqds-builder"
+        run: |
+           npm run prepare
+        working-directory: /packages/uqds-builder/
+
       # --- Build Storybook React ---
       - name: "Build Storybook REACT"
         run: |
