--- a/packages/uqds-builder/package.json
+++ b/packages/uqds-builder/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "private-design-output",
+  "name": "uqds-builder",
   "version": "3.0.0-alpha.15",
   "description": "Render style kits for UQ clients",
   "private": true,
