--- a/.github/workflows/publish-preview.yml
+++ b/.github/workflows/publish-preview.yml
@@ -61,6 +61,10 @@ jobs:
           aws-region: ap-southeast-2
           role-session-name: GitHubActions-S3Sync-Preview-${{ github.run_id }}
 
+      - name: "Sync uqds-builder to S3 preview environment"
+        run: |
+          aws s3 cp packages/uqds-builder/dist s3://${{ secrets.AWS_S3_BUCKET_TOOLS }}/uqds-builder/${{ github.run_id }} --acl public-read --follow-symlinks --recursive
+
       - name: "Sync Storybook HTML to S3 preview environment"
         run: |
           aws s3 sync packages/storybook-html/storybook-static s3://${{ secrets.AWS_S3_BUCKET_TOOLS }}/storybook-html/${{ github.run_id }} --acl public-read --follow-symlinks --delete
@@ -76,6 +80,7 @@ jobs:
           header: preview
           message: |
             Storybook Previews for Run `${{ github.run_id }}`:
+            * **uqds-builder:** https://uq-ds-regsuit.s3.amazonaws.com/uqds-builder/${{ github.run_id }}/index.html
             * **HTML:** https://uq-ds-regsuit.s3.amazonaws.com/storybook-html/${{ github.run_id }}/index.html
             * **React:** https://uq-ds-regsuit.s3.amazonaws.com/storybook-react/${{ github.run_id }}/index.html
 
