--- a/.github/workflows/publish-preview.yml
+++ b/.github/workflows/publish-preview.yml
@@ -32,13 +32,13 @@ jobs:
       - name: "📦️ Install dependencies"
         run: npm ci
 
-      # --- Build uqds-builder ---
-      - name: "Build uqds-builder"
+      # --- Build UQDS-BUILDER ---
+      - name: "Build UQDS-BUILDER"
         run: |
            npm run prepare
         working-directory: packages/uqds-builder/
 
-      # --- Build Storybook React ---
+      # --- Build Storybook REACT ---
       - name: "Build Storybook REACT"
         run: |
            npm run build-storybook
@@ -61,7 +61,7 @@ jobs:
           aws-region: ap-southeast-2
           role-session-name: GitHubActions-S3Sync-Preview-${{ github.run_id }}
 
-      - name: "Sync uqds-builder to S3 preview environment"
+      - name: "Sync UQDS-BUILDERto S3 preview environment"
         run: |
           aws s3 cp packages/uqds-builder/dist s3://${{ secrets.AWS_S3_BUCKET_TOOLS }}/uqds-builder/${{ github.run_id }} --acl public-read --follow-symlinks --recursive
 
@@ -80,7 +80,7 @@ jobs:
           header: preview
           message: |
             Storybook Previews for Run `${{ github.run_id }}`:
-            * **uqds-builder:** https://uq-ds-regsuit.s3.amazonaws.com/uqds-builder/${{ github.run_id }}/index.html
+            * **UQDS-BUILDER (Homepage):** https://uq-ds-regsuit.s3.amazonaws.com/uqds-builder/${{ github.run_id }}/index.html
             * **HTML:** https://uq-ds-regsuit.s3.amazonaws.com/storybook-html/${{ github.run_id }}/index.html
-            * **React:** https://uq-ds-regsuit.s3.amazonaws.com/storybook-react/${{ github.run_id }}/index.html
+            * **REACT:** https://uq-ds-regsuit.s3.amazonaws.com/storybook-react/${{ github.run_id }}/index.html
 
