updated Regression test prefix

--- a/regconfig.json
+++ b/regconfig.json
@@ -16,7 +16,8 @@
       "privateToken": "$UQDS_PERSONAL_ACCESS_TOKEN"
     },
     "reg-publish-s3-plugin": {
-      "bucketName": "uq-ds-regsuit"
+      "bucketName": "uq-ds-regsuit",
+      "pathPrefix?": "Regression"
     },
     "reg-keygen-git-hash-plugin": {}
   }
