--- a/.github/workflows/publish-preview.yml
+++ b/.github/workflows/publish-preview.yml
@@ -63,15 +63,15 @@ jobs:
 
       - name: "UQDS-BUILDER: Sync to preview environment"
         run: |
-          aws s3 cp packages/uqds-builder/dist s3://${{ secrets.AWS_S3_BUCKET_TOOLS }}/uqds-builder/${{ github.run_id }} --acl public-read --follow-symlinks --recursive
+          aws s3 cp packages/uqds-builder/dist s3://${{ secrets.AWS_S3_BUCKET_TOOLS }}/preview/${{ github.run_id }}/uqds-builder/ --acl public-read --follow-symlinks --recursive
 
       - name: "Storybook HTML: Sync to preview environment"
         run: |
-          aws s3 sync packages/storybook-html/storybook-static s3://${{ secrets.AWS_S3_BUCKET_TOOLS }}/storybook-html/${{ github.run_id }} --acl public-read --follow-symlinks --delete
-  
+          aws s3 sync packages/storybook-html/storybook-static s3://${{ secrets.AWS_S3_BUCKET_TOOLS }}/preview/${{ github.run_id }}/storybook-html/ --acl public-read --follow-symlinks --delete
+
       - name: "Storybook REACT: Sync to preview environment"
         run: |
-          aws s3 sync packages/storybook-react/storybook-static s3://${{ secrets.AWS_S3_BUCKET_TOOLS }}/storybook-react/${{ github.run_id }} --acl public-read --follow-symlinks --delete
+          aws s3 sync packages/storybook-react/storybook-static s3://${{ secrets.AWS_S3_BUCKET_TOOLS }}/preview/${{ github.run_id }}/storybook-react/ --acl public-read --follow-symlinks --delete
 
       - name: "Add links to Storybook previews in PR comment"
         uses: marocchino/sticky-pull-request-comment@v2
@@ -79,8 +79,8 @@ jobs:
           GITHUB_TOKEN: ${{ secrets.UQDS_PERSONAL_ACCESS_TOKEN }}
           header: preview
           message: |
-            Storybook Previews for Run `${{ github.run_id }}`:
-            * **UQDS-BUILDER (Homepage):** https://uq-ds-regsuit.s3.amazonaws.com/uqds-builder/${{ github.run_id }}/index.html
-            * **HTML:** https://uq-ds-regsuit.s3.amazonaws.com/storybook-html/${{ github.run_id }}/index.html
-            * **REACT:** https://uq-ds-regsuit.s3.amazonaws.com/storybook-react/${{ github.run_id }}/index.html
+            Design System Previews for Run `${{ github.run_id }}`:
+            * **UQDS-BUILDER (Homepage):** https://uq-ds-regsuit.s3.amazonaws.com/preview/${{ github.run_id }}/uqds-builder/index.html
+            * **HTML:** https://uq-ds-regsuit.s3.amazonaws.com/preview/${{ github.run_id }}/storybook-html/index.html
+            * **REACT:** https://uq-ds-regsuit.s3.amazonaws.com/preview/${{ github.run_id }}/storybook-react/index.html
 
