updated homepage links

--- a/.github/workflows/publish-preview.yml
+++ b/.github/workflows/publish-preview.yml
@@ -80,7 +80,9 @@ jobs:
           header: preview
           message: |
             Design System Previews for Run `${{ github.run_id }}`:
-            * **UQDS-BUILDER (Homepage):** https://uq-ds-regsuit.s3.amazonaws.com/preview/${{ github.run_id }}/uqds-builder/index.html
+            **UQDS-BUILDER**
+            * **HOMEPAGE:** https://uq-ds-regsuit.s3.amazonaws.com/preview/${{ github.run_id }}/uqds-builder/index.html
+            **Storybook Previews**
             * **HTML:** https://uq-ds-regsuit.s3.amazonaws.com/preview/${{ github.run_id }}/storybook-html/index.html
             * **REACT:** https://uq-ds-regsuit.s3.amazonaws.com/preview/${{ github.run_id }}/storybook-react/index.html
 
