feat: Add Typescript type for icons
This allows Typescript code to report errors in the IDE and during build, if an
icon name is specified that doesn't exist.

--- a/packages/icon/package.json
+++ b/packages/icon/package.json
@@ -30,9 +30,11 @@
     "index.js",
     "dist/*",
     "src/js/*",
-    "src/scss/*"
+    "src/scss/*",
+    "src/ts/_build/*"
   ],
   "style": "dist/css/main.css",
+  "types": "src/ts/index.d.ts",
   "repository": {
     "type": "git",
     "url": "git+https://github.com/uq-its-ss/design-system.git"
