--- a/.github/workflows/publish-preview.yml
+++ b/.github/workflows/publish-preview.yml
@@ -32,7 +32,13 @@ jobs:
       - name: "📦️ Install dependencies"
         run: npm ci
 
-      # --- Build Storybook React ---
+      # --- Build UQDS-BUILDER ---
+      - name: "Build UQDS-BUILDER"
+        run: |
+           npm run prepare
+        working-directory: packages/uqds-builder/
+
+      # --- Build Storybook REACT ---
       - name: "Build Storybook REACT"
         run: |
            npm run build-storybook
@@ -55,13 +61,17 @@ jobs:
           aws-region: ap-southeast-2
           role-session-name: GitHubActions-S3Sync-Preview-${{ github.run_id }}
 
-      - name: "Sync Storybook HTML to S3 preview environment"
+      - name: "UQDS-BUILDER: Sync to preview environment"
         run: |
-          aws s3 sync packages/storybook-html/storybook-static s3://${{ secrets.AWS_S3_BUCKET_TOOLS }}/storybook-html/${{ github.run_id }} --acl public-read --follow-symlinks --delete
-  
-      - name: "Sync Storybook REACT to S3 preview environment"
+          aws s3 cp packages/uqds-builder/dist s3://${{ secrets.AWS_S3_BUCKET_TOOLS }}/preview/${{ github.run_id }}/ --acl public-read --follow-symlinks --recursive
+
+      - name: "Storybook HTML: Sync to preview environment"
         run: |
-          aws s3 sync packages/storybook-react/storybook-static s3://${{ secrets.AWS_S3_BUCKET_TOOLS }}/storybook-react/${{ github.run_id }} --acl public-read --follow-symlinks --delete
+          aws s3 sync packages/storybook-html/storybook-static s3://${{ secrets.AWS_S3_BUCKET_TOOLS }}/preview/${{ github.run_id }}/storybook-html/ --acl public-read --follow-symlinks --delete
+
+      - name: "Storybook REACT: Sync to preview environment"
+        run: |
+          aws s3 sync packages/storybook-react/storybook-static s3://${{ secrets.AWS_S3_BUCKET_TOOLS }}/preview/${{ github.run_id }}/storybook-react/ --acl public-read --follow-symlinks --delete
 
       - name: "Add links to Storybook previews in PR comment"
         uses: marocchino/sticky-pull-request-comment@v2
@@ -69,7 +79,13 @@ jobs:
           GITHUB_TOKEN: ${{ secrets.UQDS_PERSONAL_ACCESS_TOKEN }}
           header: preview
           message: |
-            Storybook Previews for Run `${{ github.run_id }}`:
-            * **HTML:** https://uq-ds-regsuit.s3.amazonaws.com/storybook-html/${{ github.run_id }}/index.html
-            * **React:** https://uq-ds-regsuit.s3.amazonaws.com/storybook-react/${{ github.run_id }}/index.html
+            Design System Previews for Run `${{ github.run_id }}`:
+            
+            **UQDS-BUILDER**
+              * [Homepage](https://uq-ds-regsuit.s3.amazonaws.com/preview/${{ github.run_id }}/index.html)
+
+            **Storybook**
+
+              * [HTML Components](https://uq-ds-regsuit.s3.amazonaws.com/preview/${{ github.run_id }}/storybook-html/index.html)
+              * [REACT Components](https://uq-ds-regsuit.s3.amazonaws.com/preview/${{ github.run_id }}/storybook-react/index.html)
 
