--- a/packages/icon/package.json
+++ b/packages/icon/package.json
@@ -40,12 +40,13 @@
     "url": "git+https://github.com/uq-its-ss/design-system.git"
   },
   "scripts": {
-    "build": "npm run build-ts && npm run build-icons",
+    "build": "npm run build-ts && npm run build-icons && npm run format",
     "build-ts": "tsc -p ./src/ts/tsconfig.json",
     "build-icons": "node dist/index.js",
     "clean": "npm run clean-ts && npm run clean-icons",
     "clean-ts": "rm -rf ./dist/*.js*",
     "clean-icons": "rm -rf ./dist/images src/*/_build/*",
+    "format": "prettier --write \"**/*.{css,scss,js,jsx,json,md,mdx,tsx}\"",
     "prepare": "gulp -f ../../gulpfile.js --cwd=. prepare"
   },
   "bugs": {
