chore(release):Publish
 - @uqds/accordion@6.0.0
 - @uqds/alert@6.0.0
 - @uqds/app-maps@3.0.0
 - @uqds/blockquote@5.0.0
 - @uqds/body@3.0.0
 - @uqds/breadcrumb@7.0.0
 - @uqds/button@3.0.0
 - @uqds/card@3.0.0
 - @uqds/core@4.0.0
 - @uqds/footer@6.0.0
 - @uqds/footer-legacy@3.0.0
 - @uqds/form@3.0.0
 - @uqds/grid@3.0.0
 - @uqds/grid-menu@3.0.0
 - @uqds/header@6.0.0
 - @uqds/header-legacy@3.0.0
 - @uqds/hero@6.0.0
 - @uqds/icon@3.0.0
 - @uqds/image@5.0.0
 - @uqds/layout@6.0.0
 - @uqds/lists@3.0.0
 - @uqds/loading-spinner@3.0.0
 - @uqds/navigation@6.0.0
 - @uqds/page-header@3.0.0
 - @uqds/pagination@3.0.0
 - @uqds/pane@3.0.0
 - @uqds/pill@5.0.0
 - @uqds/previous-next@3.0.0
 - @uqds/progression@3.0.0
 - @uqds/react@1.0.0
 - @uqds/sections@3.0.0
 - @uqds/side-nav@3.0.0
 - @uqds/site-header@6.0.0
 - @uqds/social@5.0.0
 - storybook-html@6.0.0
 - storybook-react@1.0.0
 - @uqds/table@3.0.0
 - @uqds/tabs@3.0.0
 - uqds-builder@3.0.0

--- a/packages/blockquote/package.json
+++ b/packages/blockquote/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@uqds/blockquote",
-  "version": "5.0.0-alpha.3",
+  "version": "5.0.0",
   "description": "Blockquote component",
   "keywords": [
     "uqds",
@@ -41,6 +41,6 @@
     "url": "https://github.com/uq-its-ss/design-system/issues"
   },
   "dependencies": {
-    "@uqds/core": "^4.0.0-alpha.2"
+    "@uqds/core": "^4.0.0"
   }
 }
