--- a/packages/storybook-html/package.json
+++ b/packages/storybook-html/package.json
@@ -1,6 +1,6 @@
 {
   "name": "storybook-html",
-  "version": "6.0.0-alpha.19",
+  "version": "6.0.0",
   "description": "Storybook for HTML instance for uqds component development",
   "private": true,
   "main": "index.js",
@@ -36,41 +36,41 @@
     "@storybook/manager-api": "^8.5.2",
     "@storybook/test-runner": "^0.19.1",
     "@storybook/theming": "^8.4.2",
-    "@uqds/accordion": "^6.0.0-alpha.5",
-    "@uqds/alert": "^6.0.0-alpha.6",
-    "@uqds/app-maps": "^3.0.0-alpha.3",
-    "@uqds/blockquote": "^5.0.0-alpha.3",
-    "@uqds/body": "^3.0.0-alpha.3",
-    "@uqds/breadcrumb": "^7.0.0-alpha.5",
-    "@uqds/button": "^3.0.0-alpha.4",
-    "@uqds/card": "^3.0.0-alpha.10",
-    "@uqds/core": "^4.0.0-alpha.2",
-    "@uqds/footer": "^6.0.0-alpha.6",
-    "@uqds/footer-legacy": "^3.0.0-alpha.2",
-    "@uqds/form": "^3.0.0-alpha.5",
-    "@uqds/grid": "^3.0.0-alpha.2",
-    "@uqds/grid-menu": "^3.0.0-alpha.5",
-    "@uqds/header": "^6.0.0-alpha.5",
-    "@uqds/header-legacy": "^3.0.0-alpha.5",
-    "@uqds/hero": "^6.0.0-alpha.5",
-    "@uqds/icon": "^3.0.0-alpha.5",
-    "@uqds/image": "^5.0.0-alpha.2",
-    "@uqds/layout": "^6.0.0-alpha.4",
-    "@uqds/lists": "^3.0.0-alpha.2",
-    "@uqds/loading-spinner": "^3.0.0-alpha.5",
-    "@uqds/navigation": "^6.0.0-alpha.5",
-    "@uqds/page-header": "^3.0.0-alpha.2",
-    "@uqds/pagination": "^3.0.0-alpha.3",
-    "@uqds/pane": "^3.0.0-alpha.5",
-    "@uqds/pill": "^5.0.0-alpha.2",
-    "@uqds/previous-next": "^3.0.0-alpha.5",
-    "@uqds/progression": "^3.0.0-alpha.2",
-    "@uqds/sections": "^3.0.0-alpha.2",
-    "@uqds/side-nav": "^3.0.0-alpha.5",
-    "@uqds/site-header": "^6.0.0-alpha.5",
-    "@uqds/social": "^5.0.0-alpha.2",
-    "@uqds/table": "^3.0.0-alpha.2",
-    "@uqds/tabs": "^3.0.0-alpha.2",
+    "@uqds/accordion": "^6.0.0",
+    "@uqds/alert": "^6.0.0",
+    "@uqds/app-maps": "^3.0.0",
+    "@uqds/blockquote": "^5.0.0",
+    "@uqds/body": "^3.0.0",
+    "@uqds/breadcrumb": "^7.0.0",
+    "@uqds/button": "^3.0.0",
+    "@uqds/card": "^3.0.0",
+    "@uqds/core": "^4.0.0",
+    "@uqds/footer": "^6.0.0",
+    "@uqds/footer-legacy": "^3.0.0",
+    "@uqds/form": "^3.0.0",
+    "@uqds/grid": "^3.0.0",
+    "@uqds/grid-menu": "^3.0.0",
+    "@uqds/header": "^6.0.0",
+    "@uqds/header-legacy": "^3.0.0",
+    "@uqds/hero": "^6.0.0",
+    "@uqds/icon": "^3.0.0",
+    "@uqds/image": "^5.0.0",
+    "@uqds/layout": "^6.0.0",
+    "@uqds/lists": "^3.0.0",
+    "@uqds/loading-spinner": "^3.0.0",
+    "@uqds/navigation": "^6.0.0",
+    "@uqds/page-header": "^3.0.0",
+    "@uqds/pagination": "^3.0.0",
+    "@uqds/pane": "^3.0.0",
+    "@uqds/pill": "^5.0.0",
+    "@uqds/previous-next": "^3.0.0",
+    "@uqds/progression": "^3.0.0",
+    "@uqds/sections": "^3.0.0",
+    "@uqds/side-nav": "^3.0.0",
+    "@uqds/site-header": "^6.0.0",
+    "@uqds/social": "^5.0.0",
+    "@uqds/table": "^3.0.0",
+    "@uqds/tabs": "^3.0.0",
     "babel-loader": "^9.2.1",
     "core-js": "^3.39.0",
     "css-loader": "^7.1.2",
