--- a/packages/body/package.json
+++ b/packages/body/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@uqds/body",
-  "version": "3.0.0-alpha.3",
+  "version": "3.0.0",
   "description": "Basic styles for HTML elements",
   "keywords": [
     "uqds",
@@ -40,6 +40,6 @@
     "url": "https://github.com/uq-its-ss/design-system/issues"
   },
   "dependencies": {
-    "@uqds/core": "^4.0.0-alpha.2"
+    "@uqds/core": "^4.0.0"
   }
 }
