--- a/packages/breadcrumb/package.json
+++ b/packages/breadcrumb/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@uqds/breadcrumb",
-  "version": "7.0.0-alpha.5",
+  "version": "7.0.0",
   "description": "Breadcrumb component",
   "keywords": [
     "uqds",
@@ -51,7 +51,7 @@
     "url": "https://github.com/uq-its-ss/design-system/issues"
   },
   "dependencies": {
-    "@uqds/core": "^4.0.0-alpha.2",
-    "@uqds/icon": "^3.0.0-alpha.5"
+    "@uqds/core": "^4.0.0",
+    "@uqds/icon": "^3.0.0"
   }
 }
