--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@uqds/core",
-  "version": "4.0.0-alpha.2",
+  "version": "4.0.0",
   "description": "The core package that all component packages depend on",
   "keywords": [
     "uqds",
