--- a/packages/grid-menu/package.json
+++ b/packages/grid-menu/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@uqds/grid-menu",
-  "version": "3.0.0-alpha.5",
+  "version": "3.0.0",
   "description": "Grid menu components",
   "keywords": [
     "uqds",
@@ -41,7 +41,7 @@
     "url": "https://github.com/uq-its-ss/design-system/issues"
   },
   "dependencies": {
-    "@uqds/core": "^4.0.0-alpha.2",
-    "@uqds/icon": "^3.0.0-alpha.5"
+    "@uqds/core": "^4.0.0",
+    "@uqds/icon": "^3.0.0"
   }
 }
