--- a/packages/layout/package.json
+++ b/packages/layout/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@uqds/layout",
-  "version": "6.0.0-alpha.4",
+  "version": "6.0.0",
   "description": "Grid CSS",
   "keywords": [
     "uqds",
@@ -41,6 +41,6 @@
     "url": "https://github.com/uq-its-ss/design-system/issues"
   },
   "dependencies": {
-    "@uqds/core": "^4.0.0-alpha.2"
+    "@uqds/core": "^4.0.0"
   }
 }
