--- a/packages/pill/package.json
+++ b/packages/pill/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@uqds/pill",
-  "version": "5.0.0-alpha.2",
+  "version": "5.0.0",
   "description": "Pill component",
   "keywords": [
     "uqds",
@@ -41,6 +41,6 @@
     "url": "https://github.com/uq-its-ss/design-system/issues"
   },
   "dependencies": {
-    "@uqds/core": "^4.0.0-alpha.2"
+    "@uqds/core": "^4.0.0"
   }
 }
