--- a/packages/storybook-react/package.json
+++ b/packages/storybook-react/package.json
@@ -1,6 +1,6 @@
 {
   "name": "storybook-react",
-  "version": "1.0.0-alpha.2",
+  "version": "1.0.0",
   "description": "Storybook for React instance for uqds component development",
   "private": true,
   "keywords": [],
@@ -17,8 +17,8 @@
     "serve-storybook": "http-server storybook-static -i -p 6007"
   },
   "dependencies": {
-    "@uqds/icon": "^3.0.0-alpha.5",
-    "@uqds/react": "^1.0.0-alpha.8"
+    "@uqds/icon": "^3.0.0",
+    "@uqds/react": "^1.0.0"
   },
   "devDependencies": {
     "@storybook/addon-a11y": "^8.5.2",
