--- a/.github/workflows/reg.yml
+++ b/.github/workflows/reg.yml
@@ -1,4 +1,4 @@
-name: Visual Regression Testing and preview environment
+name: Visual Regression Testing
 
 permissions:
   id-token: write # Required for OIDC AWS authentication
@@ -61,7 +61,7 @@ jobs:
           npm run serve-storybook &
         working-directory: packages/storybook-html/
 
-      - name: "Create screenshots (HTML)"
+      - name: "Create screenshots (HTML and REACT)"
         run: |
           npm run update-screenshots
 
@@ -72,7 +72,7 @@ jobs:
           aws-region: ap-southeast-2
           role-session-name: GitHubActions-RegSuit-${{ github.run_id }}
 
-      - name: "Run visual regression (HTML)"
+      - name: "Run visual regression (HTML and REACT)"
         env:
           UQDS_PERSONAL_ACCESS_TOKEN: ${{ secrets.UQDS_PERSONAL_ACCESS_TOKEN }}
           AWS_REGION: 'ap-southeast-2'
