--- a/packages/breadcrumb/package.json
+++ b/packages/breadcrumb/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@uqds/breadcrumb",
-  "version": "7.0.0",
+  "version": "8.0.0-alpha.0",
   "description": "Breadcrumb component",
   "keywords": [
     "uqds",
