--- a/packages/storybook-html/package.json
+++ b/packages/storybook-html/package.json
@@ -1,6 +1,6 @@
 {
   "name": "storybook-html",
-  "version": "6.0.0",
+  "version": "7.0.0-alpha.0",
   "description": "Storybook for HTML instance for uqds component development",
   "private": true,
   "main": "index.js",
@@ -41,7 +41,7 @@
     "@uqds/app-maps": "^3.0.0",
     "@uqds/blockquote": "^5.0.0",
     "@uqds/body": "^3.0.0",
-    "@uqds/breadcrumb": "^7.0.0",
+    "@uqds/breadcrumb": "^8.0.0-alpha.0",
     "@uqds/button": "^3.0.0",
     "@uqds/card": "^3.0.0",
     "@uqds/core": "^4.0.0",
