updated testing script structure.

--- a/.github/workflows/validation.yml
+++ b/.github/workflows/validation.yml
@@ -5,26 +5,32 @@ on:
       - 'master'
       - 'beta'
   pull_request: {}
+
 jobs:
-  main:
+  validate:
     runs-on: ubuntu-latest
+
     steps:
       - name: "🛑 Cancel Previous Runs"
         uses: styfle/cancel-workflow-action@0.11.0
 
-      - name: "⬇️ Checkout repo"
+      - name: "⬇️ Checkout repository"
         uses: actions/checkout@v4
 
-      - name: "⎔ Setup node 18"
-        uses: actions/setup-node@v3
+      - name: "⎔ Setup Node.js"
+        uses: actions/setup-node@v4
         with:
           node-version: 18
 
-      - name: "📦️ Install dependencies"
+      - name: "📦 Install dependencies"
         run: npm ci
 
-      - name: "🧹 Linting"
+      - name: "📐 Check Code Formatting"
+        run: npm run check:format
+
+      - name: "🧹 Run All Linting Checks"
         run: npm run lint
 
-      - name: "✅ Tests"
+      - name: "✅ Run Tests"
         run: npm run test
+
