--- a/package.json
+++ b/package.json
@@ -79,19 +79,23 @@
     "whatwg-fetch": "^3.6.20"
   },
   "scripts": {
-    "format": "prettier --write \"**/*.{css,scss,js,jsx,json,md,mdx,tsx}\"",
-    "lint": "prettier --check \"**/*.{css,scss,js,jsx,json,md,mdx,tsx}\" && npm run lint-js && npm run lint-css && npm run lint-tsc --workspace=packages/react",
-    "lint-js": "eslint",
-    "lint-css": "stylelint \"**/*.{css,scss}\"",
-    "lint-fix": "npm run format && npm run lint-js -- --fix && npm run lint-css -- --fix",
-    "test": "vitest run",
-    "test-ui": "vitest --ui",
-    "test-watch": "vitest",
+    "storybook": "concurrently -k -n \"HTML,REACT\" -c \"#636cff,#ff4785\" \"wait-on tcp:6007 && npm run storybook:html\" \"npm run storybook:react\"",
+    "storybook:html": "cd packages/storybook-html && npm run storybook",
+    "storybook:react": "cd packages/storybook-react && npm run storybook",
     "update-screenshots": "node scripts/screenshot.js",
     "reg-suit": "reg-suit run",
-    "storybook-html": "cd packages/storybook-html && npm run storybook",
-    "storybook-react": "cd packages/storybook-react && npm run storybook",
-    "storybook": "concurrently -k -n \"HTML,REACT\" -c \"#636cff,#ff4785\" \"wait-on tcp:6007 && npm run storybook-html\" \"npm run storybook-react\""
+    "format": "prettier --write \"**/*.{css,scss,js,jsx,json,md,mdx,tsx}\"",
+    "check:format": "prettier --check \"**/*.{css,scss,js,jsx,json,md,mdx,tsx}\"",
+    "lint": "npm run check:format && npm run lint:es && npm run lint:style && npm run lint:tsc:react",
+    "lint:es": "eslint",
+    "lint:style": "stylelint \"**/*.{css,scss}\"",
+    "lint:tsc:react": "tsc --noEmit --project packages/react/tsconfig.json",
+    "fix:es": "npm run lint:es -- --fix",
+    "fix:style": "npm run lint:style -- --fix",
+    "fix": "npm run format && npm run fix:es && npm run fix:style",
+    "test": "vitest run",
+    "test:ui": "vitest --ui",
+    "test:watch": "vitest"
   },
   "engines": {
     "node": ">=18",
