--- a/packages/footer/package.json
+++ b/packages/footer/package.json
@@ -38,6 +38,7 @@
   },
   "dependencies": {
     "@uqds/accordion": "^6.0.0",
+    "@uqds/acknowledgement-statement": "^0.0.1-alpha.0",
     "@uqds/core": "^4.0.0",
     "@uqds/grid": "^3.0.0",
     "@uqds/icon": "^3.0.0"
