--- a/packages/acknowledgement/package.json
+++ b/packages/acknowledgement/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "@uqds/acknowledgement-statement",
+  "name": "@uqds/acknowledgement",
   "version": "0.0.1-alpha.0",
-  "description": "Acknowledgement statement component",
+  "description": "Acknowledgement component",
   "keywords": [
     "uqds",
     "uq",
@@ -10,7 +10,7 @@
     "scss",
     "sass",
     "css",
-    "Acknowledgement statement"
+    "Acknowledgement"
   ],
   "publishConfig": {
     "access": "public"
@@ -22,14 +22,7 @@
   },
   "homepage": "https://github.com/uq-its-ss/design-system#readme",
   "license": "ISC",
-  "main": "dist/js/uqds.js",
-  "module": "dist/mjs/index.js",
   "exports": {
-    ".": {
-      "import": "./dist/mjs/index.js",
-      "require": "./dist/js/uqds.js"
-    },
-    "./src/js/*": "./src/js/*.js",
     "./src/scss/*": "./src/scss/*"
   },
   "style": "dist/css/main.css",
@@ -45,6 +38,6 @@
     "url": "https://github.com/uq-its-ss/design-system/issues"
   },
   "dependencies": {
-    "@uqds/core": "^1.2.4-alpha.0"
+    "@uqds/core": "^4.0.0"
   }
 }
