--- a/packages/footer/package.json
+++ b/packages/footer/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@uqds/footer",
-  "version": "6.0.0",
+  "version": "7.0.0-alpha.0",
   "description": "The POC UQ footer component package",
   "keywords": [
     "uqds",
