--- a/packages/uqds-builder/package.json
+++ b/packages/uqds-builder/package.json
@@ -1,6 +1,6 @@
 {
   "name": "uqds-builder",
-  "version": "4.0.0-alpha.0",
+  "version": "4.0.0-alpha.1",
   "description": "Render style kits for UQ clients",
   "private": true,
   "author": {
@@ -37,7 +37,7 @@
     "@uqds/button": "^3.0.0",
     "@uqds/card": "^3.0.0",
     "@uqds/core": "^4.0.0",
-    "@uqds/footer": "^6.0.0",
+    "@uqds/footer": "^7.0.0-alpha.0",
     "@uqds/footer-legacy": "^3.0.0",
     "@uqds/form": "^3.0.0",
     "@uqds/grid": "^3.0.0",
