--- a/packages/acknowledgement/package.json
+++ b/packages/acknowledgement/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "@uqds/footer",
-  "version": "7.0.0-alpha.0",
-  "description": "The POC UQ footer component package",
+  "name": "@uqds/acknowledgement",
+  "version": "0.0.1-alpha.0",
+  "description": "Acknowledgement component",
   "keywords": [
     "uqds",
     "uq",
@@ -10,8 +10,11 @@
     "scss",
     "sass",
     "css",
-    "footer"
+    "Acknowledgement"
   ],
+  "publishConfig": {
+    "access": "public"
+  },
   "author": {
     "name": "University of Queensland",
     "email": "webservices@uq.edu.au",
@@ -19,31 +22,22 @@
   },
   "homepage": "https://github.com/uq-its-ss/design-system#readme",
   "license": "ISC",
-  "directories": {
-    "lib": "src"
+  "exports": {
+    "./src/scss/*": "./src/scss/*"
   },
-  "files": [
-    "src/*",
-    "dist/*"
-  ],
-  "scripts": {
-    "prepare": "gulp -f ../../gulpfile.js --cwd=. prepare"
-  },
+  "style": "dist/css/main.css",
   "repository": {
     "type": "git",
     "url": "git+https://github.com/uq-its-ss/design-system.git"
+  },
+  "scripts": {
+    "test": "echo \"Error: run tests from root\" && exit 1",
+    "prepare": "gulp -f ../../gulpfile.js --cwd=. prepare"
   },
   "bugs": {
     "url": "https://github.com/uq-its-ss/design-system/issues"
   },
   "dependencies": {
-    "@uqds/accordion": "^6.0.0",
-    "@uqds/acknowledgement": "^0.0.1-alpha.0",
-    "@uqds/core": "^4.0.0",
-    "@uqds/grid": "^3.0.0",
-    "@uqds/icon": "^3.0.0"
-  },
-  "devDependencies": {
-    "gulp": "^5.0.0"
+    "@uqds/core": "^4.0.0"
   }
 }
