chore(release):Publish
 - @uqds/pagination@4.0.0-alpha.0
 - @uqds/react@2.0.0-alpha.0
 - storybook-html@7.0.0-alpha.3
 - storybook-react@2.0.0-alpha.0
 - uqds-builder@4.0.0-alpha.3

--- a/packages/uqds-builder/package.json
+++ b/packages/uqds-builder/package.json
@@ -1,6 +1,6 @@
 {
   "name": "uqds-builder",
-  "version": "4.0.0-alpha.2",
+  "version": "4.0.0-alpha.3",
   "description": "Render style kits for UQ clients",
   "private": true,
   "author": {
@@ -52,7 +52,7 @@
     "@uqds/loading-spinner": "^3.0.0",
     "@uqds/navigation": "^6.0.0",
     "@uqds/page-header": "^3.0.0",
-    "@uqds/pagination": "^3.0.0",
+    "@uqds/pagination": "^4.0.0-alpha.0",
     "@uqds/pane": "^3.0.0",
     "@uqds/pill": "^5.0.0",
     "@uqds/previous-next": "^3.0.0",
