--- a/packages/pagination/package.json
+++ b/packages/pagination/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@uqds/pagination",
-  "version": "3.0.0",
+  "version": "4.0.0-alpha.0",
   "description": "Pagination component",
   "keywords": [
     "uqds",
