--- a/packages/react/package.json
+++ b/packages/react/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@uqds/react",
-  "version": "1.0.0",
+  "version": "2.0.0-alpha.0",
   "description": "React components",
   "keywords": [
     "uqds",
@@ -51,7 +51,7 @@
     "@uqds/core": "^4.0.0",
     "@uqds/icon": "^3.0.0",
     "@uqds/layout": "6.0.0-alpha.0",
-    "@uqds/pagination": "^3.0.0",
+    "@uqds/pagination": "^4.0.0-alpha.0",
     "@uqds/pane": "^3.0.0",
     "classnames": "^2.5.1"
   },
