--- a/packages/storybook-html/package.json
+++ b/packages/storybook-html/package.json
@@ -1,6 +1,6 @@
 {
   "name": "storybook-html",
-  "version": "7.0.0-alpha.2",
+  "version": "7.0.0-alpha.3",
   "description": "Storybook for HTML instance for uqds component development",
   "private": true,
   "main": "index.js",
@@ -60,7 +60,7 @@
     "@uqds/loading-spinner": "^3.0.0",
     "@uqds/navigation": "^6.0.0",
     "@uqds/page-header": "^3.0.0",
-    "@uqds/pagination": "^3.0.0",
+    "@uqds/pagination": "^4.0.0-alpha.0",
     "@uqds/pane": "^3.0.0",
     "@uqds/pill": "^5.0.0",
     "@uqds/previous-next": "^3.0.0",
