--- a/packages/storybook-react/package.json
+++ b/packages/storybook-react/package.json
@@ -1,6 +1,6 @@
 {
   "name": "storybook-react",
-  "version": "1.0.0",
+  "version": "2.0.0-alpha.0",
   "description": "Storybook for React instance for uqds component development",
   "private": true,
   "keywords": [],
@@ -18,7 +18,7 @@
   },
   "dependencies": {
     "@uqds/icon": "^3.0.0",
-    "@uqds/react": "^1.0.0"
+    "@uqds/react": "^2.0.0-alpha.0"
   },
   "devDependencies": {
     "@storybook/addon-a11y": "^8.5.2",
