--- a/packages/storybook-html/package.json
+++ b/packages/storybook-html/package.json
@@ -1,6 +1,6 @@
 {
   "name": "storybook-html",
-  "version": "6.0.0",
+  "version": "7.0.0-alpha.3",
   "description": "Storybook for HTML instance for uqds component development",
   "private": true,
   "main": "index.js",
@@ -41,11 +41,11 @@
     "@uqds/app-maps": "^3.0.0",
     "@uqds/blockquote": "^5.0.0",
     "@uqds/body": "^3.0.0",
-    "@uqds/breadcrumb": "^7.0.0",
+    "@uqds/breadcrumb": "^8.0.0-alpha.0",
     "@uqds/button": "^3.0.0",
     "@uqds/card": "^3.0.0",
     "@uqds/core": "^4.0.0",
-    "@uqds/footer": "^6.0.0",
+    "@uqds/footer": "^7.0.0-alpha.1",
     "@uqds/footer-legacy": "^3.0.0",
     "@uqds/form": "^3.0.0",
     "@uqds/grid": "^3.0.0",
@@ -60,7 +60,7 @@
     "@uqds/loading-spinner": "^3.0.0",
     "@uqds/navigation": "^6.0.0",
     "@uqds/page-header": "^3.0.0",
-    "@uqds/pagination": "^3.0.0",
+    "@uqds/pagination": "^4.0.0-alpha.0",
     "@uqds/pane": "^3.0.0",
     "@uqds/pill": "^5.0.0",
     "@uqds/previous-next": "^3.0.0",
