--- a/packages/uqds-builder/package.json
+++ b/packages/uqds-builder/package.json
@@ -1,6 +1,6 @@
 {
   "name": "uqds-builder",
-  "version": "4.0.0-alpha.3",
+  "version": "4.0.0",
   "description": "Render style kits for UQ clients",
   "private": true,
   "author": {
@@ -33,11 +33,11 @@
     "@uqds/alert": "^6.0.0",
     "@uqds/blockquote": "^5.0.0",
     "@uqds/body": "^3.0.0",
-    "@uqds/breadcrumb": "^8.0.0-alpha.0",
+    "@uqds/breadcrumb": "^8.0.0",
     "@uqds/button": "^3.0.0",
     "@uqds/card": "^3.0.0",
     "@uqds/core": "^4.0.0",
-    "@uqds/footer": "^7.0.0-alpha.1",
+    "@uqds/footer": "^7.0.0",
     "@uqds/footer-legacy": "^3.0.0",
     "@uqds/form": "^3.0.0",
     "@uqds/grid": "^3.0.0",
@@ -52,7 +52,7 @@
     "@uqds/loading-spinner": "^3.0.0",
     "@uqds/navigation": "^6.0.0",
     "@uqds/page-header": "^3.0.0",
-    "@uqds/pagination": "^4.0.0-alpha.0",
+    "@uqds/pagination": "^4.0.0",
     "@uqds/pane": "^3.0.0",
     "@uqds/pill": "^5.0.0",
     "@uqds/previous-next": "^3.0.0",
