--- a/packages/react/package.json
+++ b/packages/react/package.json
@@ -62,10 +62,11 @@
   },
   "devDependencies": {
     "@types/react": "^18.3.18",
-    "@vitejs/plugin-react": "^4.3.4",
-    "typescript": "^5.7.3",
-    "vite": "^6.0.11",
-    "vite-plugin-dts": "^4.5.0"
+    "@vitejs/plugin-react": "^4.6.0",
+    "typescript": "^5.8.3",
+    "vite": "^6.3.5",
+    "vite-plugin-commonjs": "^0.10.4",
+    "vite-plugin-dts": "^4.5.4"
   },
   "peerDependencies": {
     "react": "^18.3.1"
