fix: Restore /tsx export
This is needed so the React Storybook can import the original Typescript
instead of the transpiled Javascript, so that it can use the types to
automatically populate some of the options available for each component.

--- a/packages/react/package.json
+++ b/packages/react/package.json
@@ -42,7 +42,8 @@
     "./css": {
       "types": "./src/types/css.d.ts",
       "default": "./dist/js/index.css"
-    }
+    },
+    "./tsx": "./src/jsx/index.ts"
   },
   "style": "dist/js/index.css",
   "repository": {
